# STL

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md
C++/: CMakeLists.txt  Overide_Encapsulation_stack_method.cpp  Overide_Encapsulation_stack_method.h  Source_main.cpp  lamdaFunction.h  vectorStlStd.h  vector_list_stl.cpp
C++/Helloworld/: Helloworld.sln
C++/Helloworld/Helloworld/: Log.cpp  (+4 more)
C++_Basics/: C++_Basics.sln
C++_Basics/C++_Basics/: C++_Basics.vcxproj  C++_Basics.vcxproj.filters  MoveSemantics_C++11.cpp  Operator_Overloading.cpp  Overide_Encapsulation_heap_method.cpp  Semantic.h
C++_Cmake/: CMakeLists.txt  Consturctos_initialisation.cpp  Operator_overloading.h  Overide_Encapsulation_heap_method.h  StlVector.cpp  lamda_functions.cpp  stlVectors.h
Design Patterns/Visitor_pattern/: Visitor_pattern.sln
DesignPatterns/: Adaptor.cpp  Adaptor.h  CMakeLists.txt  IteratorPattern.cpp  Pattern_source.cpp  README.md  Visitor_pattern.cpp  Visitor_pattern.h
GoogleTests/: CMakeLists.txt  ExampleTest.h  GoogleTests.sln  test.cpp
GoogleTests/Debug/: GoogleTests.exe.gta.testdurations  GoogleTests.ilk
GoogleTests/GoogleTests/: ExampleTest.cpp  GoogleTests.vcxproj
GoogleTests/GoogleTests/Debug/: GoogleTests.exe.recipe  GoogleTests.vcxproj.FileListAbsolute.txt
GoogleTests/GoogleTests/Debug/GoogleTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  GoogleTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SolidPrinciples/: CMakeLists.txt  DependencyPrin.cpp  DependencyPrin.h  InverSionPrin.cpp  InverSionPrin.h  Likovskis.cpp  Likovskis.h  OpenClosed.cpp  OpenClosed.h  README.md  SingleResp.cpp  SingleResp.h  main_solid.cpp
(+52 files in other folders)
